utilities/static-webserver/static-webserver-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: static-webserver
  labels:
    name: "static-webserver"
