utilities/static-webserver/static-webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-webserver
  namespace: static-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-webserver
  template:
    metadata:
      labels:
        app: static-webserver
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
        volumeMounts:
        - name: static-webserver-files
          mountPath: /etc/nginx/html
        - name: static-webserver-nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: static-webserver-files
        configMap:
          name: static-webserver-content
      - name: static-webserver-nginx-config
        configMap:
          name: static-webserver-nginx-config
