utilities/static-webserver/static-webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-webserver-service
  namespace: static-webserver
spec:
  type: NodePort
  selector:
    app: static-webserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080  # Ensuring it doesn't conflict with standard ports
